--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <p>this is not a joke. This is literally what Fidel looks like. This is who I'm talking about.</p>
         <p>i show this simply as a demonstration of the gravity of our situation </p>
     </body>
-<div class="sidenav">
+<div class="topnav" id="myTopnav"
     <a href="#">about</a>
     <a href="#">portfolio</a>
     <a href="#">me</a>
     <a href="#">feewee</a>
 </div>
-.sidenav{
+.topnav{
     width: 160p;
 
 }
