--- a/index.html
+++ b/index.html
@@ -56,19 +56,12 @@
         <p>this is not a joke. This is literally what Fidel looks like. This is who I'm talking about.</p>
         <p>i show this simply as a demonstration of the gravity of our situation </p>
     </body>
-<div class="topnav" id="myTopnav"
-    <a href="#">about</a>
-    <a href="#">portfolio</a>
-    <a href="#">me</a>
-    <a href="#">feewee</a>
+<div class="topnav" id="myTopnav">
+  <nav>
+  
+    <a href="#me" class="active">Start</a>
+    <a href="#professional">professional</a>
+    <a href="#interesting">interesting</a>
+    <a href="#feewee">feewee</a>
+  </nav>
 </div>
-.topnav{
-    width: 160p;
-
-}
-
-
-}
-</html>  
-<ul id="myUL">
-  <li>span class="caret">Oobi
