--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </body>
 <div class="topnav" id="myTopnav">
   <nav>
-  <link rel="stylesheet" src="style.css">
+  <link rel="stylesheet" href="style.css">
     <a href="#me" class="active">Start</a>
     <a href="#professional">professional</a>
     <a href="#interesting">interesting</a>
