--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a href="#me" class="active">Start</a>
     <a href="#professional">professional</a>
     <a href="#interesting">interesting</a>
-    <a href="#feewee">feewee</a>
+    <a href="#music">music</a>
   </nav>
 </div>
 
